--- a/website/css/reset.css
+++ b/website/css/reset.css
@@ -9,7 +9,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-
+header li {
+  float: center;
+  display: inline;
+  padding: 0 20px 0 20px
+}
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block;
   text-decoration: none;
